--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,11 +25,11 @@ export const prerender = true;
     <div class="content">
       <h2 id="about">About.</h2>
       <p>
-        Hey, I am Okiki Ojo (pronounced O-key-key O-jo), I’m a student
-        studying Software Engineering at <Anchor href="https://ontariotechu.ca/"
-          >Ontario Tech University</Anchor
-        > (formerly University of Ontario Institute of Technology, UOIT), who is currently working as a Software Engineer Intern at <Anchor href="https://vercel.com/"
-        >Vercel</Anchor>. From a
+        Hey, I am Hadzami, I’m a student
+        studying Computer Science at <Anchor href="https://ugm.ac.id"
+        >Universitas Gadjah Mada</Anchor
+        >, who is currently working as a Software Engineer Intern at <Anchor href="https://suitmedia.com/"
+        >Suitmedia</Anchor>. From a
         very young age, I've always been interested in tech, and science. Initially,
         I started web development out of curiosity, eventually it became a hobby,
         and after many hobby projects (e.g. Open Source projects; read more in <Anchor
@@ -82,8 +82,8 @@ export const prerender = true;
     <div class="content">
       <h3 class="nav-item" id="skills">Skills</h3>
       <p>
-        I have experience in Astro, Javascript, Typescript, CSS/SASS, HTML, Pug,
-        Node.js, Fastify, Pjax, Solid.js, Svelte, C#, C++, and more… I prefer to
+        I have experience in Next JS, Javascript, Typescript, CSS/SASS, HTML, Astro JS,
+        Node.js, Kotlin, ASP.NET and more… I prefer to
         learn skills as I need them, so I can focus on finding solutions to
         problems instead of trying to implement new technologies for the sake of
         implementing them.
