--- a/src/components/HeadMetadata.astro
+++ b/src/components/HeadMetadata.astro
@@ -3,14 +3,14 @@ import { SEO } from "astro-seo";
 import "@/styles/global.scss";
 
 const {
-  title = "Okiki Ojo — Web Developer & Designer (okikio)",
-  description = "A Web Developer and Designer based in Ontario, Canada, with an eye for great design (UI) and even better user experience (UX).",
-  keywords = "Okiki Ojo, web dev, UX/UI, consistent, design, software engineer, student".split(
+  title = "Hadzami Setiawan — Web Developer (Backend)",
+  description = "A Web Developer based in Yogyakarta, Indonesia.",
+  keywords = "Hadzami Setiawan, web dev, UX/UI, consistent, design, software engineer, student".split(
     ","
   ),
   img = {
     url: `/favicon/banner-image.png`,
-    alt: "The banner image for Okiki Ojo's portfolio website, it has a yellow background and with a black 'K' in the center, representing his logo.",
+    alt: "The banner image for Hadazmi setiawan's portfolio website, it has a yellow background and with a black 'K' in the center, representing his logo.",
     width: 1200,
     height: 630,
   },
