Change logo & color

--- a/src/components/HeadMetadata.astro
+++ b/src/components/HeadMetadata.astro
@@ -91,7 +91,7 @@ const extendMeta = {
       image: imageDetails.url,
     },
     article: {
-      author: "Okiki Ojo",
+      authors: ["Hadzami Setiawan"],
       tags: Array.from(keywords, (x) => x.trim()),
     },
     optional: {
