--- a/src/components/HeroBanner.astro
+++ b/src/components/HeroBanner.astro
@@ -32,7 +32,7 @@ let sizes = `(max-width: 600px) 250px, (max-width: 1024px) 450px`;
         <h1>
           Hello, I am <strong class="text-primary" aria-label="Okiki Ojo">Hadzami.</strong>
         </h1>
-        <h2>Web Developer - Problem Solver - Computer Science Student</h2>
+        <h2>Backend Developer - Frontend Developer - Computer Science Student</h2>
       </div>
       <Image
         src={src}
@@ -188,7 +188,7 @@ let sizes = `(max-width: 600px) 250px, (max-width: 1024px) 450px`;
         }
 
         .icon-container {
-          outline: 4px dashed #ffff006b;
+          outline: 4px dashed #9AE8FF6b;
         }
       }
 
