--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -9,7 +9,7 @@ import Anchor from "./Anchor.astro";
     <div class="logo">
       <Anchor
         href="/"
-        aria-label="Okiki Ojo's logo, it's used on all social media site to identify and represent Okiki"
+        aria-label="Hadzami Setiawan's logo, it's used on all social media site to identify and represent Hadzami"
         title="Logo"
         class="umami--click--logo-click"
       >
@@ -23,11 +23,11 @@ import Anchor from "./Anchor.astro";
       <Anchor href="/#contact" class="item umami--click--contact-nav-link">Contact</Anchor>
       
       <div class="seperator"></div>
-      <Anchor href="https://blog.okikio.dev" class="item umami--click--blog">Blog</Anchor>
+      <Anchor href="https://blog.hadza.me" class="item umami--click--blog">Blog</Anchor>
       <div class="px-2 xsm:hidden"></div>
       <div class="logo xsm:hidden">
         <Anchor
-          href="https://twitter.com/okikio_dev"
+          href="https://twitter.com/hadzamis"
           class="text-primary bg-primary/10 item umami--click--twitter-profile"
           aria-label="Link to the Okiki Ojo's Twitter profile"
           title="Twitter"
@@ -42,7 +42,7 @@ import Anchor from "./Anchor.astro";
 
     <div class="logo lt-xsm:hidden">
       <Anchor
-        href="https://twitter.com/okikio_dev"
+        href="https://twitter.com/hadzamis"
         class="text-primary bg-primary/10 item umami--click--twitter-profile"
         aria-label="Link to the Okiki Ojo's Twitter profile"
         title="Twitter"
@@ -56,7 +56,7 @@ import Anchor from "./Anchor.astro";
 
     <div class="logo">
       <Anchor
-        href="https://github.com/okikio"
+        href="https://github.com/hadhaz"
         class="text-primary bg-primary/10 item  umami--click--github-profile"
         aria-label="Link to the Okiki Ojo's GitHub profile"
         title="GitHub"
