--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,7 @@ import Anchor from "./Anchor.astro";
       Back To Top
     </div>
   </Anchor>
-  <span>© {new Date().getFullYear()} Okiki Ojo. All rights reserved. </span>
+  <span>© {new Date().getFullYear()} Hadzami Setiawan. All rights reserved. </span>
   <span><Anchor href="/privacy">Privacy Policy</Anchor>{" & "}<Anchor href="/terms">Terms of Service</Anchor>{" & "}<Anchor href="/rss.xml" external>RSS</Anchor></span>
 </footer>
 
